<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="vertical"
    android:padding="@dimen/_7sdp"
    android:background="@drawable/rounded_border_edittext"

    tools:context=".fragments.InputDialogFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_7sdp"
       >

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_edit_text"

            android:paddingStart="@dimen/_5sdp"
            android:hint="@string/inter_the_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <EditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:hint="@string/inter_amount"
            android:inputType="phone"
            android:maxLength="4"
            android:maxLines="1"
            android:background="@drawable/white_edit_text"
            android:paddingStart="@dimen/_5sdp"

            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <EditText
            android:id="@+id/secret_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inter_the_secret_number"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:background="@drawable/white_edit_text"
            android:paddingStart="@dimen/_5sdp"

            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:visibility="gone" />

    </LinearLayout>

        <RadioGroup
            android:id="@+id/answersGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/choice_zain"
                android:id="@+id/choice_zain"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:text="@string/choice_mtn"
                android:id="@+id/choice_mtn"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/black"

                android:layout_height="wrap_content"/>

            <RadioButton
                android:text="@string/choice_sudani"
                android:id="@+id/choice_sudani"
                android:layout_width="wrap_content"
                android:shadowColor="@color/black"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_height="wrap_content"/>


        </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send_balance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/button_background"
        android:text="@string/send"
        android:textSize="@dimen/_20sdp"
        android:textColor="@android:color/white" />

</LinearLayout>