<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_active"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">


<ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:paddingLeft="25.0dip"
        android:paddingRight="25.0dip">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_300sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_50sdp"
                android:src="@drawable/ic_picture" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="20.0dip"
                android:layout_marginRight="@dimen/_8sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_phone_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:background="@drawable/white_edit_text"
                    android:hint="@string/phone_id"
                    android:inputType="phone"

                    android:maxLines="1"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/input_name_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:background="@drawable/white_edit_text"
                    android:hint="@string/name_id"
                    android:inputType="text"

                    android:maxLines="1"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="5.0dip"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/button_background_register"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_marginRight="5.0dip"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>